# flint

./: .gitignore  AGENTS.md  Anchor.toml  CODEX_AGENT_PROMPT.md  Cargo.toml  README.md  package.json
.codex/: setup.sh
.omx/artifacts/: claude-repo-users-blanco-colosseum-flint-review-the-current-uncommi-2026-05-06T06-43-18-020Z.md
.omx/context/: flint-guard-live-product-20260506T062619Z.md  flint-guard-long-arc-20260504T163002Z.md  flint-guard-long-arc-20260507T122657Z.md  flint-guard-shared-feed-20260505T000000Z.md  flint-kr-watch-market-20260506T075200Z.md  (+1 more)
artifacts/: benchmark-local.json  benchmark-summary.md  colosseum-scorecard.md  devnet-config.json  devnet-deploy.json  devnet-smoke-happy.json  devnet-smoke-timeout.json  judge-guide.md  sample-selected-quote-response.json  sample-webhook-payload.json
docs/: b2b-integration.md  flint-positioning.md  flint-roadmap.md  market-positioning.md  operator-runbook.md  request-state-diagram.md  watch-risk-model.md
flint-console/: README.md  index.html  package-lock.json  package.json  tsconfig.test.json
idl/: flint.json
relay/: index.js  notifier.js  openapi.json  relay.test.js  server.js  store.js  watch.js
scripts/: benchmark.js  build.sh  calc_discriminator.py  demo.js  deploy-devnet.sh  devnet-smoke.js  init-config.js  test.sh
sdk/: flint-guard-safety-feed.test.ts  flint-guard-safety-feed.ts  flint-relay-client.ts  tsconfig.json  tsconfig.test.json
solver-bot/: Cargo.toml
solver-bot/src/: executor.rs  main.rs  monitor.rs
solver-bot/src/strategies/: jupiter.rs  mod.rs  naive.rs
tests/: flint.ts
(+64 files in other folders)
